# villa

./: .gitignore
.github/workflows/: test-vesuvius-install.yml  test-vesuvius.yml
foundation/datasets/medial-cubes/: README.md  environment.yml  final_labeler.py  label_thinner.py  midline_helper_simplified.py  tools.py
foundation/scroll2zarr/: zarr_to_ome_fullres_z.py
foundation/scrollcase/scripts/: 15cm_riser_BM18_small_tomo_stage.py
ink-detection/: inference_timesformer.py
scrollprize.org/: docusaurus.config.js
scrollprize.org/docs/: 20_community_projects.md  31_jobs.md  34_prizes.md
scrollprize.org/src/components/: Landing.js
segmentation/tracer/: README.md  cpp_cost_functions_reference.txt  implementation_progress.md  setup.py  test_unified_plan.md  test_vc_grow_seg_from_seed.py  th_how_to.md  theseus_examples.md  vc_grow_seg_from_seed.py
segmentation/tracer/cost_functions/: __init__.py  anchor_loss.py  dist_loss.py  dist_loss_2d.py  implementation_plan.md  lin_chk_dist_loss.py  space_line_loss_acc.py  space_loss_acc.py  straight_loss.py  straight_loss_2.py  straight_loss_2d.py  surface_loss_d.py  trilinear_interpolator.py  z_coord_loss.py  z_location_loss.py
segmentation/tracer/cost_functions/autodiff/: __init__.py  anchor_loss_autodiff.py  dist_loss_2d_autodiff.py  dist_loss_autodiff.py  lin_chk_dist_loss_autodiff.py  space_line_loss_acc_autodiff.py  space_loss_acc_autodiff.py  straight_loss_2_autodiff.py  straight_loss_autodiff.py  z_coord_loss_autodiff.py  z_location_loss_autodiff.py
segmentation/tracer/cost_functions/base/: __init__.py  anchor_loss.py  dist_loss.py  dist_loss_2d.py  lin_chk_dist_loss.py  space_line_loss_acc.py  space_loss_acc.py  straight_loss.py  straight_loss_2.py  straight_loss_2d.py  surface_loss_d.py  z_coord_loss.py  z_location_loss.py
segmentation/tracer/cost_functions/utils/: __init__.py
segmentation/tracer/examples/: optimize_curve.py
segmentation/tracer/surfaces/: __init__.py  chunked_3d.py  quad_surface.py  quad_surface_implementation.md  surface_meta.py  visualization.py
segmentation/tracer/tests/: __init__.py  config.json  test_anchor_loss.py  test_dist_loss.py  test_dist_loss_2d.py  test_fringe_expansion.py  test_lin_chk_dist_loss.py  test_space_line_loss_acc.py  test_space_loss_acc.py  test_straight_loss_2.py  test_straight_loss_2d.py  test_trilinear_interpolator.py  test_utils.py  test_vc_grow_seg_from_seed.py  test_z_coord_loss.py  test_z_location_loss.py  test_zarr_extraction.py
segmentation/tracer/tests/core/: test_distance_transform.py  test_grid.py  test_quad_surface.py
segmentation/tracer/tracer/: __init__.py  batch_utils.py  fringe_expansion.py  grid.py  grow.py  optimizer.py
segmentation/tracer/utils/: convert_tifxyz_to_3dtif.py  extract_zarr_bounding_box.py  find_nonzero_points.py  run_tests.py
thaumato-anakalyptor/: .gitignore  DockerfileThaumato
thaumato-anakalyptor/GUI/: MainWindow.py
thaumato-anakalyptor/GraphLabeler/: .gitignore  config.py  gui_main.py  main.py  ome_zarr_view.py  scroll_graph_util.py  solver_interface.py  utils.py  widgets.py
thaumato-anakalyptor/ThaumatoAnakalyptor/: graph_labeling.py  graph_solve.py  graph_to_mesh.py  grid_to_pointcloud.py  instances_to_graph.py  instances_to_h5.py  instances_to_sheets.py  mesh_merger.py  mesh_quality.py  mesh_to_surface.py  pointcloud_to_instances.py  slim_uv.py
thaumato-anakalyptor/ThaumatoAnakalyptor/debug/: debug_instances.py  umbilicus_XYZkhartes2thaumato.py
thaumato-anakalyptor/ThaumatoAnakalyptor/graph_problem/: .gitignore  CMakeLists.txt  main_py.cpp  mean_solver.cu  mean_solver.h  mst_union.cpp  mst_union.h  node_structs.h  solve_gpu.cu  solve_gpu.h
thaumato-anakalyptor/ThaumatoAnakalyptor/mask3d/: main_instance_segmentation.py
thaumato-anakalyptor/ThaumatoAnakalyptor/sheet_generation/: CMakeLists.txt  pointcloud_processing.cpp
thaumato-anakalyptor/libigl-python-bindings/: .gitignore  setup.py  slim_uv.py
thaumato-anakalyptor/libigl-python-bindings/classes/: classes.cpp
thaumato-anakalyptor/libigl-python-bindings/cmake/: PyiglDependencies.cmake
vesuvius/: README.md  setup.py
vesuvius/.github/workflows/: test-local-install.yml
vesuvius/checkpoints/Default_Config/: Default_Config_config.yaml
vesuvius/data/: vc_dataset.py  volume.py
vesuvius/docs/: accessing_data.md  create_architecture_diagram.py  create_flow_diagrams.py  data_formatting.md  training_flow.md
vesuvius/models/: config_manager.py  utils.py
vesuvius/models/augmentation/: readme.md
vesuvius/models/configuration/: config_manager.py  default_config.yaml  mae_pretrain_2d_config.yaml  mae_pretrain_config.yaml  mae_pretrain_config_aws.yaml  multi-class_config.yaml  multi-task_config.yaml  multitask_multiclass_config.yaml  single_task_aux_task_edt.yaml  single_task_aux_task_surface_normals.yaml  single_task_config.yaml  threshold_example_config.yaml
vesuvius/models/datasets/: __init__.py  base_dataset.py  image_dataset.py  intensity_sampling.py  label_config_utils.py  mae_pretrain_dataset.py  napari_dataset.py  tif_dataset.py  validate_labels.py  zarr_dataset.py
vesuvius/models/model/: build_network_from_config.py
vesuvius/models/run/: blending.py  finalize_outputs.py  inference.py  train.py  vesuvius_pipeline.py
vesuvius/models/tests/: __init__.py  create_test_dataset.py  test_data_generator.py  test_data_validation.py  test_datasets.py  test_train.py
vesuvius/models/training/: losses.py  lr_schedulers.py  normalization.py  optimizers.py  train_augmentations.py
vesuvius/scripts/: edt_frangi_label_zarr.py  extract_approved_patches.py  voxelize_objs.py
vesuvius/structure_tensor/: create_st.py  run_create_st.py
vesuvius/utils/: plotting.py  utils.py
vesuvius/utils/io/: patch_cache_utils.py  zarr_io.py
vesuvius/utils/models/: helpers.py  load_nnunet_model.py
vesuvius/utils/napari_trainer/: inference.py  main_window.py  test_integration.py
vesuvius/utils/vc_proofreader/: config.py  main.py
vesuvius/vesuvius.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+59 files in other folders)
